# simplicio-sprint

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GOAL_RESULT.md  PROGRESS.md  README.md  README.pt-BR.md  SENDSPRINT_FLOW_MAP.md  package.json  playwright.config.ts  providers.yml.example  pyproject.toml
.catalog/: agents.json
.claude/: settings.json
.claude/hooks/: session-start-skills.ps1
.codex/: config.toml  hooks.json
.codex/hooks/: post-edit.ps1  post-edit.sh  pre-commit.ps1  pre-commit.sh  session-start-skills.sh
.github/: copilot-instructions.md
.github/workflows/: agentic-starter-sync.yml  ci.yml  dod.yml  publish.yml  pypi-publish.yml  scaffold-self-check.yml  sendsprint.yml
.plans/: PROMPT.md  prd.json  progress.txt
.ralph/: config.toml
.simplicio/: precedent-index.json  project-map.json
.skills/: README.md
.skills/hyperframes/: SKILL.md  house-style.md  sendsprint-evidence.md
.skills/hyperframes-cli/: SKILL.md
.skills/hyperframes-gsap/: SKILL.md
.skills/hyperframes-media/: SKILL.md
.skills/hyperframes-registry/: SKILL.md
.skills/open-source-contribution/: SKILL.md
.skills/playwright-e2e/: SKILL.md
.specs/: README.md
.specs/architecture/: ADR-006-llm-codegen-budgeting.md  ADR-006-llm-codegen-provider-and-budget.md  ADR-007-deploy-callback-idempotency.md  ADR-008-mcp-server-schema.md  ADR-009-cross-stack-runtime.md  DESIGN.md  ROADMAP.md
.specs/integrations/: JIRA_AZUREDEVOPS_CORE.md
.specs/product/: VISION.md
.specs/sprints/: BACKLOG.md  task-template.md
.specs/v2/: cloud-dispatcher.md
.specs/workflow/: RELEASE.md  WORKFLOW.md
bench/: validate_sprint_plan.py
bench/results/: 2026-05-28.txt
crates/sendsprint-core/: Cargo.toml  pyproject.toml
crates/sendsprint-core/src/: lib.rs
docs/: LLM_USAGE_POLICY.md  PLUGIN_ADAPTERS.md  cross-repo-issues.md  dependencies.md  deploy.md  domain-map.md  local-setup.md  troubleshooting.md
docs/adr/: 0001-initial.md
docs/architecture/: overview.md
docs/demo/: sprint-autopilot.md  transcript-sample.txt
docs/features/: README.md
docs/perf/: rust-pyo3-evaluation.md
docs/presentations/: build_sendsprint_implementation_deck.py
docs/product/: SENDSPRINT_SITE_AND_SURFACES_MASTER.md
docs/roadmap/: sprint-autopilot-roadmap.md
docs/validation/: ralph-llm-project-mapper.md
examples/: workspace-multi-project.yaml  workspace-single-project.yaml  workspace.yaml
mobile/: README.md  app.json  package-lock.json  package.json
plugins/: README.md
plugins/claude-code/: README.md
plugins/codex/: AGENTS.md  README.md  config.toml  plugin.toml
plugins/hermes/: README.md  hermes-plugin.json
plugins/openclaw/: README.md  openclaw-plugin.json
scripts/: README.md  generate_demo_screenshots.py
sendsprint/: __init__.py  action_catalog.py  agentic_starter.py  azure_devops_urls.py  bootstrap.py  browser_agents.py  catalog.py  ci_repair.py  cli.py  command_queue.py  contracts.py  control_plane.py  core.py  credentials.py  dashboard_spec.py  delivery_authorization.py  dependency_autopilot.py  diff_verifier.py  doctor.py  domain_quality.py  event_store.py  evidence.py  failure_learning.py  flow.py  frontend_flows.py  github_integration.py  historical_reporting.py  installer.py  issue_quality.py  locks.py  logging_setup.py  loops.py  mission.py  operational_memory.py  oss_mode.py  plan_verifier.py  planning.py  planning_publish.py  platform.py  plugins.py  (+30 more)
sendsprint/accelerators/: python_impl.py  rust_bridge.py
sendsprint/actions/: __init__.py  adapter.py  catalog.py  code_adapter.py  lifecycle.py  marketing_adapter.py
sendsprint/agents/: lint_runner.py  pr_creator.py  pr_reviewer.py  security_reviewer.py  story_task_planner.py  test_runner.py  worktree.py
sendsprint/api/: README.md  __init__.py  __main__.py  backlog_state.py  project_setup_workspace.py  schemas.py  security.py  server.py
sendsprint/architecture/: builder.py  mapper.py
sendsprint/delivery/: __init__.py  evidence.py  git_ops.py  pr.py  worktree.py
sendsprint/executor/: __init__.py  simplicio.py
sendsprint/flow/: __init__.py  sprint_flow.py
sendsprint/ingest/: __init__.py  transcripts.py
sendsprint/llm/: client.py
sendsprint/mapper/: __init__.py  adapter.py
sendsprint/mcp/: __init__.py  azure_devops.py  server.py
sendsprint/models/: __init__.py  reports.py  sprint.py  workspace.py
sendsprint/operators/: __init__.py  _mcp_bridge.py  azure_devops_operator.py  base.py  bitbucket_operator.py  clickup_operator.py  gitee_operator.py  github_issues_operator.py  github_operator.py  gitlab_operator.py  hermes_operator.py  jira_operator.py  linear_operator.py  slack_operator.py  trello_operator.py
sendsprint/plugin_templates/: __init__.py  antigravity.md  claude.md  codex.md  copilot.md  cursor.mdc  hermes.md  (+3 more)
telas/: GPT_IMAGE_2_PROMPTS.md  README.md  SCREEN_INVENTORY.md  enhance_exports_with_gpt_image_2.py  extract_storyboard_screens.py  manifest.json
templates/: action-catalog.json
tests/: api_client.py  test_accelerators.py  test_action_catalog.py  test_action_lifecycle.py  test_agentic_starter.py  test_agents.py  test_api.py  test_api_control_plane.py  test_architecture_mapper.py  test_autonomy.py  test_azure_devops_mcp.py  test_azure_devops_operator.py  test_azure_devops_urls.py  test_backlog_state.py  test_bootstrap.py  test_browser_agents.py  test_build_agent_catalog_script.py  test_catalog.py  test_ci_repair.py  test_cli.py  test_command_queue.py  test_contracts.py  test_control_plane.py  test_core_validator.py  test_dashboard_api.py  test_dashboard_spec.py  test_delivery.py  test_delivery_authorization.py  test_dependency_autopilot.py  test_diff_verifier.py  test_doctor.py  test_domain_quality.py  test_e2e_frontend_sim.py  test_event_store.py  test_evidence_bundle.py  test_executive_report.py  test_executor.py  test_failure_learning.py  test_fanout.py  test_flow.py  (+67 more)
video/: README.md  package-lock.json  package.json
web/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
(+155 files in other folders)
