[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "simplicio-sprint"
version = "1.2.3"
description = "Autonomous sprint-to-PR delivery agent. Reads Jira/Azure DevOps/GitHub tasks, delegates code edits to simplicio-cli, ships draft PRs with evidence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wesley Simplicio", email = "wesleybob4@gmail.com" }]
keywords = ["sprint", "jira", "azure-devops", "github", "simplicio-cli", "agent", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "simplicio-cli>=0.4.3",
    "simplicio-mapper>=0.6.1",
    "simplicio-prompt>=1.12.0",
]

[project.optional-dependencies]
keyring = ["keyring>=25.0.0"]
screenshot = ["playwright>=1.48.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
sendsprint = "sendsprint.cli:app"

[project.urls]
Homepage = "https://github.com/wesleysimplicio/simplicio-sprint"
Repository = "https://github.com/wesleysimplicio/simplicio-sprint"
Issues = "https://github.com/wesleysimplicio/simplicio-sprint/issues"

[tool.hatch.build.targets.wheel]
packages = ["sendsprint"]

[tool.hatch.build.targets.sdist]
# Keep the published source distribution lean — no videos / slide decks.
include = [
    "sendsprint",
    "skills",
    "README.md",
    "README.pt-BR.md",
    "CHANGELOG.md",
    "docs/cross-repo-issues.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
