[package]
name = "sendsprint-core"
version = "0.1.0"
edition = "2021"
description = "Rust kernels exposed to SendSprint via PyO3 (sprint-plan validator)."
license = "MIT"

[lib]
name = "sendsprint_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
